2000-02-21  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltext.c (check_merge): New function, implementation of
	`HTMLText::check_merge'.
	(html_text_class_init): Install it.

	* htmltext.h: New virtual method `HTMLText::check_merge'.

	* htmlengine-edit-fontstyle.c (html_engine_set_font_style):
	Changed parameters: get an AND mask and an OR mask for modifying
	the style.
	(set_font_style_in_selection_forall): Use a SetFontStyleForallData
	closure, so that we can store both masks.
	(set_font_style_in_selection): Likewise.
	* gtkhtml.c (gtk_html_set_font_style): Likewise.

	* htmltextmaster.c (merge): Completed code to preserve selection
	when merging.
	(split): Preserve selection here too.

	* htmlengine-edit-fontstyle.c
	(set_font_style_in_selection_forall): Make it work.

	* htmlembedded.c (html_embedded_grab_cursor): Removed spurious
	debugging message.

	* gtkhtml.c (gtk_html_allow_selection): New function.
	(init): Initialize `allow_selection' to TRUE.
	(button_press_event): Do not grab the pointer if `allow_selection'
	is FALSE.
	(realize): Removed spurious `g_message()'.

	* gtkhtml.h: New member `allow_selection'.

	* htmllinktext.c (html_link_text_new): Get rid of some
	ultra-verbose debugging messages.

	* All files: use the new `gtk_html_debug_log()' call instead of
	plain `g_print()'.

	* htmlcursor.c (debug_location): Always compile this in,
	unconditionally.  At least for now.  Also, new parameter `html':
	use `gtk_html_debug_log()'.

2000-02-20  Ettore Perazzoli  <ettore@helixcode.com>

	* debug.h: Renamed to `gtkhtmldebug.h'.
	* debug.c: Renamed to `gtkhtmldebug.c'.

	* gtkhtml.c (gtk_html_enable_debug): New function.

	* gtkhtml.h: New member `debug' in `GtkHTML'.

2000-02-19  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlfontstyle.h, htmlfontstyle.c: Removed.
	* gtkhtmlfontstyle.h, gtkhtmlfontstyle.c: New replacements.  We
	now use `GtkHTMLFontStyle' instead of `HTMLFontStyle' throughout,
	so that the values can be exposed to the API.
